--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -50,7 +50,7 @@
 
 \chapter{Introduction} \label{ch1}
 
-The title of this thesis is ``Formally verified functional algorithms and data structures in Coq: concepts and techniques''. In the Introduction, we take time to carefully explain what we mean by each of these words:
+The title of this thesis is ``Formally verified functional algorithms and data structures in Coq: concepts and techniques''. In the Introduction, we take time to carefully explain what we mean by each of these phrases:
 
 \begin{itemize}
     \item In section \ref{ch1s1} we look at the social context that gives rise to an interesting misconception about ``algorithms and data structures''.
@@ -66,7 +66,7 @@ In the remaining chpaters we describe the actual concepts and techniques, using 
     \item TODO
 \end{itemize}
 
-\section{An overarching paradigm} \label{ch1s1}
+\section{The overarching paradigm} \label{ch1s1}
 
 The Free Dictionary says \cite{TheFreeDictionary} that an algorithm is
 
@@ -138,9 +138,7 @@ Even though this asymptotic penalty sounds gloomy, not all hope is lost, because
 
 \section{The many-worlds interpretation of the algorithmic business} \label{ch1s3}
 
-We stated earlier that we intend to concentrate on formally proving correctness of purely functional algorithms. Before doing that, we shortly peek at how it differs from the activities and workflows of the usual algorithmic business and what we're leaving out.
-
-In the following paragraphs, we take the perspective of a person we will call, for the lack of a better English word, an \textit{algorithmist}, by which we mean someone who specifies, designs and analyzes (and also maybe implements, tests, profiles, etc.) algorithms.
+We stated earlier that we intend to concentrate on formally proving correctness of purely functional algorithms. Before doing that, we shortly peek at how it differs from the activities and workflows of the usual algorithmic business,\footnote{A person engaging in the usual algorithmic business we will call an \textit{algorithmist}.} what we embrace and what we're leaving out.
 
 ``Necessity is the mother of invention'', goes the proverb, and indeed most algorithms arise as answers to questions like ``How do I make a computer sort a list of book titles?'' or ``How do I arrange my files on the hard disk so that I can easily find them later?''. The path toward this answer looks somewhat like this:
 
@@ -170,13 +168,13 @@ As we see, a typical algorithmic solution of a problem stems from a sequence (or
 
 
 
-\section{An overview of available literature} \label{ch1s4}
+\section{An ultra short literature review} \label{ch1s4}
 
 Literature review, Okasaki is old and bad for Coq, SF3 is shallow.
 
-\section{Dupa konia na wesoło} \label{ch1s5}
+\section{Way of the Coq} \label{ch1s5}
 
-\chapter{Quicksort - \textit{tour de force}} \label{ch2}
+\chapter{A quick \textit{tour de} sort} \label{ch2}
 
 
 \chapter{A man, a plan, a canal -- MSc thesis}
