--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -140,24 +140,26 @@ Even though this asymptotic penalty sounds gloomy, not all hope is lost, because
 
 We stated earlier that we intend to concentrate on formally proving correctness of purely functional algorithms. Before doing that, we shortly peek at how it differs from the activities and workflows of the usual algorithmic business,\footnote{A person engaging in the usual algorithmic business we will call an \textit{algorithmist}.} what we embrace and what we're leaving out.
 
-``Necessity is the mother of invention'', goes the proverb, and indeed most algorithms arise as answers to questions like ``How do I make a computer sort a list of book titles?'' or ``How do I arrange my files on the hard disk so that I can easily find them later?''. The path toward this answer looks somewhat like this:
+``Necessity is the mother of invention'', goes the proverb, and indeed most algorithms arise as answers to questions like ``How do I make a computer sort a list of book titles?'' or ``How do I arrange my files on the hard disk so that I can easily find them later?''. The path toward the answer usually looks somewhat like this:
 
 \begin{itemize}
-    \item Provide a more precise specification of the problem. For example: ``Given an array $A$ of length $n$ which contains integers, rearrange them so that for every index $i < n$ we have $A[i] \leq A[i + 1]$''
-    \item Design an algorithm that solves the problem.
+    \item Provide a more precise specification of the problem.
+    \item Design an algorithm that solves the problem and write it down with a good balance of generality and detail.
     \item Prove that the algorithm is correct. If a proof is hard to find, this may be the sign that the algorithm is incorrect.
     \item Analyze complexity of the algorithm, i.e. how much resources (number of steps, bits memory, bits of randomness, etc.) does the algorithm need to solve the problem of a given size. If the algorithm needs too much resources, go back and try to design another one that needs less.
     \item Implement the algorithm and test whether the implementation is correct.
     \item Run some experiments to assess the actual performance of the implementation in a few scenarios: random data, data that often occurs in the real world, etc. If the performance is bad, try to find a better implementation or go back and design another algorithm.
 \end{itemize}
 
-An enlightening thing to do at this point is notice all the different worlds in which these activites take place. The specification is usually written in English (or whatever the language of the algorithmist), intermingled with some mathematical symbols like quantifiers. The algorithm design process takes place in the algorithmist's mind, but after he's done, it is usually written down in some kind of comfortable pseudocode that allows skipping inessential detail.
+Of course this recipe is not stiff and some variations are possible. The most obvious one would be to get rid of the pseudocode and replace it with the actual implementation. A more practice-oriented algorithmist can also skip a difficult analysis in favor of spending more time on performance profiling. A less mathematically gifted algorithmist may skip the proof in favor of more extensive testing etc.
 
-The proof is again written in a mixture of English and mathematical symbols, but that's only the surface view. If we take a closer look, it will most likely turn out that the mathematical part is based on classical logic (which admits reasoning principles like proof by contradiction \cite{ProofByContradiction} - this can be often seen in proofs of optimality) and some kind of naive set theory, but if pressed a bit, the algorithmist would readily assert that the set theory could be axiomatized using, for example, the Zermelo-Fraenkel axioms.
+No matter the exact recipe, there is a very enlightening thing to be noticed, namely all the different worlds in which these activites take place. The specification is usually written in English (or whatever the language of the algorithmist), intermingled with some mathematical symbols like quantifiers. The algorithm design process takes place in the algorithmist's mind, but after he's done, it is usually written down in some kind of comfortable pseudocode that allows skipping inessential detail.
 
-The next hidden world, in which the complexity analysis takes its place, is the model of computation. Most likely it won't be mentioned explicitly, just like the logic and set theory thing in the previous paragraph, but we can easily guess it from the fact that the algorithm is intended to be implemented on a real computer and the model of computation most similar to the workings of real hardware is the RAM machine. Last but not least, the implementation, in contrast to the algorithm's pseudocode, will be in some concrete programming language - a very popular algorithmic language, due to its speed, is \m{C++}.
+The proof is again written in a mixture of English and mathematical symbols, but that's only the surface view. If we take a closer look, it will most likely turn out that the mathematical part is based on classical logic (which admits nonconstructive reasoning principles like proof by contradiction \cite{ProofByContradiction} - this can be often seen in proofs of optimality) and some kind of naive set theory, but if pressed a bit, the algorithmist would readily assert that the set theory could be axiomatized using, let's say, the Zermelo-Fraenkel axioms.
 
-As we see, a typical algorithmic solution of a problem stems from a sequence (or rather, a loop) of activities which live in quite different worlds. Even though in practice the above recipe works well A person concerned with the formal correctness of such a solution could have many doubts related to how to worlds fit together:
+The next hidden world, in which the complexity analysis takes its place, is the model of computation. Most likely it won't be mentioned explicitly, just like the logic and set theory thing in the previous paragraph, but we can easily guess it from the fact that the algorithm is intended to be implemented on a real computer and the model of computation most similar to the workings of real hardware is the RAM machine. Last but not least, the implementation, in contrast to the algorithm's pseudocode, will be in some concrete programming language - a very  popular one among algorithmists is \m{C++}.
+
+As we see, the typical solution of an algorithmic problem stems from a sequence (or rather, a loop) of activities which live in quite different worlds. Even though the above recipe and its variations work well in practice, an inquisitive person (perhaps a philosopher) could ask a plethora of questions about how all these worlds fit together:
 
 \begin{itemize}
     \item Does the pseudocode really describe an algorithm that meets the informally written specification? Is the pen-and-paper proof correct?
