--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -54,8 +54,8 @@ The title of this thesis is ``Formally verified functional algorithms and data s
 
 \begin{itemize}
     \item In section \ref{ch1s1} we look at the social context that gives rise to an interesting misconception about ``algorithms and data structures''.
-    \item In section \ref{ch1s2} we explain ``functional'' programming by contrasting it with imperative programming.
-    \item In section \ref{ch1s3} we lay out the unity of the ``formally verified'' world by comparing it with the many worlds which are the arenas of the usual algorithmic struggles.
+    \item In section \ref{ch1s2} we explain ``functional'' programming by comparing it with imperative programming.
+    \item In section \ref{ch1s3} we lay out the unity of the ``formally verified'' algorithmic world by contrasting it with the many worlds which are the arenas of the imperative algorithmic struggles.
     \item In section \ref{ch1s4} we do an ultra short literature review and discuss how our ``concepts and techniques'' differ from these that can be found there.
     \item In section \ref{ch1s5} we show how working ``in Coq'' looks like and describe some theory and principles Coq is based on.
 \end{itemize}
@@ -136,22 +136,27 @@ The third point is that arrays, the bread-and-butter of imperative programming, 
 
 Even though this asymptotic penalty sounds gloomy, not all hope is lost, because of two reasons. First, mutable arrays can still be used in purely\footnote{``Pure'' and ``impure'' are loose terms used to classify functional languages. ``Pure'' roughly means that a language makes organized effort to separate programs that do ordinary number crunching or data processing from those that have side effects, like throwing exceptions or connecting to a database. An ``impure'' languages doesn't attempt at such a separation.} functional languages if the mutability is hidden behind a pure interface. An example of this is Haskell's ST monad. \cite{STMonad} Second, functional languages that are impure, like Standard ML or OCaml, allow using mutable arrays without much hassle, which often saves the day.
 
-\section{The many-worlds interpretation of the algorithmic business} \label{ch1s3}
+\section{The many-worlds interpretation of imperative algorithms} \label{ch1s3}
 
-We stated earlier that we intend to concentrate on formally proving correctness of purely functional algorithms. Before doing that, we shortly peek at how it differs from the activities and workflows of the usual algorithmic business,\footnote{A person engaging in the usual algorithmic business we will call an \textit{algorithmist}.} what we embrace and what we're leaving out.
+We stated earlier that we intend to concentrate on formally proving correctness of purely functional algorithms. Before doing that, we take a short detour to look at how it differs from the activities and workflows of the usual algorithmic business,\footnote{A person engaging in the usual algorithmic business we will call an \textit{algorithmist}.} what we embrace and what we're leaving out.
 
-``Necessity is the mother of invention'', goes the proverb, and indeed most algorithms arise as answers to questions like ``How do I make a computer sort a list of book titles?'' or ``How do I arrange my files on the hard disk so that I can easily find them later?''. The path toward the answer usually looks somewhat like this:
+When an algorithmist encounters a problem, let's say ``How do I sort a list of integers?'', he will follow a path towards the solution which looks roughly like this:
 
 \begin{itemize}
-    \item Provide a more precise specification of the problem.
-    \item Design an algorithm that solves the problem and write it down with a good balance of generality and detail.
+    \item Formulate a (more) precise specification of the problem.
+    \item Design an algorithm that solves the problem and write it down using some kind of pseudocode, keeping a good balance between generality and detail
     \item Prove that the algorithm is correct. If a proof is hard to find, this may be the sign that the algorithm is incorrect.
     \item Analyze complexity of the algorithm, i.e. how much resources (number of steps, bits memory, bits of randomness, etc.) does the algorithm need to solve the problem of a given size. If the algorithm needs too much resources, go back and try to design another one that needs less.
     \item Implement the algorithm and test whether the implementation is correct.
-    \item Run some experiments to assess the actual performance of the implementation in a few scenarios: random data, data that often occurs in the real world, etc. If the performance is bad, try to find a better implementation or go back and design another algorithm.
+    \item Run some experiments to assess the actual performance of the implementation, preferably considering a few common scenarios: random data, data that often occurs in the real world, data constructed by an evil adversary, etc. If the performance is unsatisfying, try to find a better implementation or go back and design a better algorithm.
 \end{itemize}
 
-Of course this recipe is not stiff and some variations are possible. The most obvious one would be to get rid of the pseudocode and replace it with the actual implementation. A more practice-oriented algorithmist can also skip a difficult analysis in favor of spending more time on performance profiling. A less mathematically gifted algorithmist may skip the proof in favor of more extensive testing etc.
+Of course this recipe is not stiff and some variations are possible. The two most popular ones would be:
+
+\begin{itemize}
+    \item The extremely practical, in which the specification and proof are dropped in favour of the test suite, the pseudocode is dropped in favour of the actual implementation, and the complexity analysis is only cursory and performed on the go, in the algorithmists head during the design phase. This approach permeates in comeptitive programming, because of the time pressure, and industry, because most ``algorithms'' there amount to unsophisticated data processing that doesn't need specification or proof.
+    \item The extremely theoretical, in which there is no implementation and thus no tests and no performance assessment, and the most time-consuming part becomes the complexity analysis. This approach is widespread in teaching, where the implementation part is left to students as an exercise, and in theoretical research, where real-world applicability is not always the most important goal.
+\end{itemize}
 
 No matter the exact recipe, there is a very enlightening thing to be noticed, namely all the different worlds in which these activites take place. The specification is usually written in English (or whatever the language of the algorithmist), intermingled with some mathematical symbols like quantifiers. The algorithm design process takes place in the algorithmist's mind, but after he's done, it is usually written down in some kind of comfortable pseudocode that allows skipping inessential detail.
 
@@ -162,7 +167,8 @@ The next hidden world, in which the complexity analysis takes its place, is the 
 As we see, the typical solution of an algorithmic problem stems from a sequence (or rather, a loop) of activities which live in quite different worlds. Even though the above recipe and its variations work well in practice, an inquisitive person (perhaps a philosopher) could ask a plethora of questions about how all these worlds fit together:
 
 \begin{itemize}
-    \item Does the pseudocode really describe an algorithm that meets the informally written specification? Is the pen-and-paper proof correct?
+    \item Can the specification and the proof really be formalized in 
+    \item Does the pseudocode really describe an algorithm that meets the informal specification? Is the pen-and-paper proof correct?
     \item Does the implementation match the pseudocode? Do tests match the specification?
     \item Does the assumed model of computation match the capabilities of the programming language used for implementation? Is the analysis correct? Do its results match the assessed performance?
     \item 
